src/objects/Loan__c.object
<CustomObject>
    <description>The loan that has been taken out by the farmer</description>
    <fields>
        <fullName>Amount_Applied_For__c</fullName>
        <description>The amount that the farmer has applied for</description>
        <label>Amount Applied For</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_Approved__c</fullName>
        <description>The amount that was approved for disbursement to the farmer</description>
        <label>Amount Approved</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Application Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <description>Currency Code</description>
        <label>Currency</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Decision Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Disburse_Date__c</fullName>
        <label>Disburse Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ewarehouse_Farmer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ewarehouse Farmer</label>
        <referenceTo>Ewarehouse_Farmer__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ewarehouse_Harvest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ewarehouse Harvest</label>
        <referenceTo>Ewarehouse_Harvest__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Farmer__c</fullName>
        <label>Farmer</label>
        <referenceTo>Farmer__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Harvest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Harvest</label>
        <referenceTo>Harvest__c</referenceTo>
        <relationshipLabel>Loans</relationshipLabel>
        <relationshipName>Loans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Account_No__c</fullName>
        <label>Loan Account No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loan_Contract_No__c</fullName>
        <label>Loan Contract No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maturity_Date__c</fullName>
        <label>Maturity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Saving_Account_No__c</fullName>
        <label>Saving Account No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repaid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Loan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LN-{00000}</displayFormat>
        <label>Loan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>